2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Rework to avoid .rel files.

2008-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/console.c, startup/bspstart.c: Refactored and renamed
	initialization routines to rtems_initialize_data_structures,
	rtems_initialize_before_drivers, rtems_initialize_device_drivers, and
	rtems_initialize_start_multitasking. This opened the sequence up so
	that bootcard() could provide a more robust and flexible framework
	which is easier to explain and understand. This also lays the
	groundwork for sharing the division of available memory between the
	RTEMS workspace and heap and the C library initialization across all
	BSPs.

2008-03-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds, startup/linkcmds_ROM: Add wildcard to
	gcc_except_table section so programs compiled with gcc 4.3.x can
	link.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/ckinit.c, include/bsp.h, startup/bspstart.c: Eliminate copies
	of the Configuration Table. Use the RTEMS provided accessor macros to
	obtain configuration fields.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h, startup/bspstart.c: Move interrupt_stack_size field
	from CPU Table to Configuration Table. Eliminate CPU Table from all
	ports. Delete references to CPU Table in all forms.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Moved most of the remaining CPU Table fields to
	the Configuration Table. This included pretasking_hook,
	predriver_hook, postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.

2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspstart.c: Eliminate the interrupt_vector_table field in the
	m68k CPU Table since it is never read.
