@@ -71,9 +71,9 @@ void volatile _Internal_error_Occurred(
 )
 {
 
-  Internal_errors_What_happened.the_source  = the_source;
-  Internal_errors_What_happened.is_internal = is_internal;
-  Internal_errors_What_happened.the_error   = the_error;
+  _Internal_errors_What_happened.the_source  = the_source;
+  _Internal_errors_What_happened.is_internal = is_internal;
+  _Internal_errors_What_happened.the_error   = the_error;
 
   _User_extensions_Fatal( the_source, is_internal, the_error );
 
