@@ -1,3 +1,8 @@
+2008-06-02	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* misc/interr.c: Convention calls for leading underscore on private
+	RTEMS variables.
+
 2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* Makefile.am: Rework to avoid .rel files.
